--- a/caffe/static_files/css/header.css
+++ b/caffe/static_files/css/header.css
@@ -1,25 +1,33 @@
 header {
-    max-width: 1960px;
     display: flex;
-    flex: 1 0 auto;
+    max-width: 1960px;
 
+    flex-flow: row;
+    justify-content: space-between;
 
     background-color: #0B0C10;
     color: white;
-    border-radius: 25px;
+    border-radius: 15px;
     margin-bottom: 15px;
+
+
 }
 
 nav {
     display: flex;
-    flex: 1 1 auto;
+    width: 320px;
+
     flex-flow: row;
     justify-content: space-between;
-
-
-
-
 }
+
+.last-nav {
+    display: flex;
+    width: 320px;
+    flex-flow: row;
+    justify-content: space-between;
+}
+
 
 img {
     border-radius: 15px;
@@ -27,19 +35,22 @@ img {
 }
 
 ul {
+
     display: flex;
-    flex: 1 1 auto;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: start;
     list-style-type: none;
 
 
 }
 
 li {
+    display: flex;
+    flex-flow: column;
+    align-content: flex-end;
     margin-right: 15px;
     text-decoration: none;
-    box-shadow: 0 2px 10px rgb(240, 240, 240);
+    /*box-shadow: 0 2px 10px rgb(240, 240, 240);*/
     border-radius: 15px;
 }
 
@@ -49,12 +60,27 @@ li {
     justify-content: center;
     width: 20%;
 
-
-
-
-
-
 }
+
 .not_auth_items {
     width: 30%;
+}
+
+
+.a-header {
+    min-height: 30px;
+    width: 100px;
+    flex: 0 1 auto;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 1px 1px 1px #888888;
+    background-color: rgba(22,22,22,0.84);
+
+
+    border-radius: 5px;
+    color: white;
+    text-decoration: none;
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif; /*Шрифт текста*/
+
 }
