--- a/caffe/static_files/css/style.css
+++ b/caffe/static_files/css/style.css
@@ -1,7 +1,8 @@
 *{
     margin: 0; /*Обнуление отступов задаваемых браузером*/
     padding: 0;
-    box-sizing: border-box;
+    max-font-size: 30px;
+    /*box-sizing: border-box;*/
 }
 
 .box {
@@ -9,10 +10,19 @@
     max-height: 100%;
 }
 
+.card-box {
+
+    display: flex;
+
+    flex-flow: row;
+    justify-content: start;
+
+}
+
 .parallax_1{
     display: flex;
     flex-flow: column;
-    justify-content: center;
+    justify-content: start;
     flex: 1 0 auto;
     border-radius: 25px;
 
@@ -26,15 +36,13 @@
     margin-bottom: 5px;
 }
 .parallax_1{
-    display: flex;
-    flex-flow: column;
-    justify-content: start;
     color: white; /*Цвет текста*/
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif; /*Шрифт текста*/
     font-weight: normal; /*Убираем жирность текста*/
-    max-font-size: 15%; /*Размер шрифта*/
+    max-font-size: 30px; /*Размер шрифта*/
     letter-spacing: 2px; /*Расстояние между буквами*/
     text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.8);
+
     height: 1500px;
 
 }
@@ -76,12 +84,14 @@ p {
 
 a {
     min-height: 30px;
-    width: 150px;
+    width: 10%;
+
     display: flex;
     flex-direction: row;
-    align-content: flex-end;
-
-
+    flex: 0 1 auto;
+    align-content: center;
+    box-shadow: 1px 1px 1px #888888;
+    background-color: rgba(22, 22, 22, 0.84);
 
 
     border-radius: 5px;
@@ -90,10 +100,9 @@ a {
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif; /*Шрифт текста*/
     margin: 10px 0 10px 0;
     padding: 5px 4px 0 4px;
-
-
-
 }
+
+
 
 section {
     display: flex;
@@ -102,75 +111,108 @@ section {
 
 
 }
-fieldset{
+fieldset {
 
-    display: flex;
-    flex-flow: row;
+    flex: 0 1 auto;
+    flex-flow: column;
     justify-content: center;
-    height: 500px;
-    min-width: 300px;
-    max-width: 25%;
-    border-radius: 15px;
+
+
+    width: 34%;
+    height: 99%;
+    border-radius: 10px;
+    /*max-height: 800px;*/
+    /*min-height: 410px;*/
+    background-color: rgba(0,0,0,0.64);
 
 }
+
+    form {
+        flex: 0 1 auto;
+        flex-flow: column;
+        justify-content: start;
+        width: 40%;
+        max-height: 600px;
+    }
+
     .container {
         margin-left: 1%;
         width: 99%;
         background-color: rgba(0,0,0,0.64);
         border-radius: 15px;
         display: flex;
-        flex-flow: column;
-        justify-content: space-between;
+        flex-direction: column;
+        align-content: space-around;
+        height: 90%;
+
     }
 
-    .container-login {
-        margin-left: 1%;
-        width: 99%;
-        background-color: rgba(0,0,0,0.64);
-        border-radius: 15px;
-        display: flex;
-        flex-flow: column;
-        align-content: space-between;
+    .row-form-errors{
+        flex: 0 1 auto;
+
+
     }
 
-    .form-control {
+
+    input, textarea {
+        color: white;
+        font-size: 20px;
         width: 80%;
-        height: 5%;
+        max-height: 8%;
         display: flex;
         flex-flow: column;
         justify-content: center;
-        background-color: rgba(126,186,255,0.35);
+        flex: 1 0 auto;
+        background-color: rgba(56,146,156,0.34);
         margin: 0 0 5% 9%;
-    }
-
-    input {
-        width: 80%;
-        height: 5%;
-        display: flex;
-        flex-flow: column;
-        justify-content: center;
-        background-color: rgba(126,186,255,0.35);
-        margin: 0 0 5% 9%;
+        border-radius: 5px;
+        box-shadow: 0 0 10px 2px white;
     }
 
     .add-user {
-        margin-top: 10%;
-        height: 10%;
-        min-width: 30px;
+        display: flex;
+        flex-flow: row;
+        justify-content: center;
+        max-height: 40%;
+        width: 45%;
         color: white;
-        background-color: rgba(0,0,0,0.54);
-        border-radius: 15px;
+        background-color: rgba(0,0,0,0.94);
+        border-radius: 10px;
+        /*margin-top: 15%;*/
+        box-shadow: 0 0 10px 2px white;
+
+    }
+    .button {
+        display: flex;
+        flex-flow: row;
+        justify-content: center;
+        height: 50px;
+        width: 300px;
+        color: white;
+        background-color: rgba(0,0,0,0.94);
+        border-radius: 10px;
+        padding-top: 5%;
+        box-shadow: 0 0 10px 2px white;
     }
 
     .helptext {
-        color: rgba(200,154,67,0.54);
+        display: flex;
+        flex-flow: column;
+        color: rgba(200,154,67,0.84);
     }
     label {
     color: beige;
 
     }
 
-/*LOGIN*/
+    .action-checkbox {
+        color: white;
+        width: 46%;
+        height: 25%;
+        box-shadow: 0 0 10px 2px white;
+        background-color: rgba(0,0,0,0.94);
+        border-radius: 10px;
+    }
 
 
 
