--- a/caffe/templates/account/change-password.html
+++ b/caffe/templates/account/change-password.html
@@ -12,30 +12,33 @@
     </head>
 
     <div class="parallax_1">
-       <section class="editPage">
-            <form method="POST" action="{% url 'change password' request.user.pk %}">
-                <fieldset>
-                    <legend>Change Your Password</legend>
-                    <div class="container">
+        <div class="add-user">
+        <form class="row-form-errors" method="POST" action="{% url 'change password' request.user.pk %}">
+            <legend>Change Your Password</legend>
+            <div class="container">
 
-                        {{ form }}
-                        {% csrf_token %}
+                {{ form }}
+                {% csrf_token %}
 
-                        <button class="edit-album" type="submit">Edit Your Profile</button>
-                    </div>
-                </fieldset>
-            </form>
-        </section>
-
-        <div class="content_1">
-
-
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo hic sunt exercitationem repellendus nesciunt fugit voluptas reprehenderit quibusdam, qui labore, iste asperiores. Similique tenetur, quia earum ut natus. Reiciendis odit quis alias totam, facilis a nemo, fugit laborum quod, enim dicta eaque voluptatem itaque nam vero laudantium, voluptas odio ullam.</p>
+                <button class="add-user" type="submit">Edit Your Profile</button>
+            </div>
+        </form>
         </div>
+    </div>
+    <div class="content_1">
+
+
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo hic sunt exercitationem repellendus nesciunt
+            fugit voluptas reprehenderit quibusdam, qui labore, iste asperiores. Similique tenetur, quia earum ut natus.
+            Reiciendis odit quis alias totam, facilis a nemo, fugit laborum quod, enim dicta eaque voluptatem itaque nam
+            vero laudantium, voluptas odio ullam.</p>
     </div>
     <div class="parallax_2"></div>
     <div class="content_2">
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo hic sunt exercitationem repellendus nesciunt fugit voluptas reprehenderit quibusdam, qui labore, iste asperiores. Similique tenetur, quia earum ut natus. Reiciendis odit quis alias totam, facilis a nemo, fugit laborum quod, enim dicta eaque voluptatem itaque nam vero laudantium, voluptas odio ullam.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo hic sunt exercitationem repellendus nesciunt
+            fugit voluptas reprehenderit quibusdam, qui labore, iste asperiores. Similique tenetur, quia earum ut natus.
+            Reiciendis odit quis alias totam, facilis a nemo, fugit laborum quod, enim dicta eaque voluptatem itaque nam
+            vero laudantium, voluptas odio ullam.</p>
     </div>
     </html>
 
