--- a/caffe/templates/account/delete-profile.html
+++ b/caffe/templates/account/delete-profile.html
@@ -11,40 +11,42 @@
         <link rel="stylesheet" href='{% static '/css/style.css' %}'>
     </head>
 
-    <!--Create Page-->
 
-    <section class="card-box">
-        <section class="editPage">
-    <form method="POST" action="{% url 'profile delete' object.pk %}">
-        <fieldset>
-
-            <div class="container">
-
-                {{ form  }}
+    <div class="parallax_1">
+        <div class="add-user">
+            <form class="row-form-errors" method="POST" action="{% url 'profile delete' object.pk %}">
+                {{ form }}
                 {% csrf_token %}
                 <legend>{{ object.username }}</legend>
 
                 <!-- Button for Deleting an Album -->
-                <button class="delete-album" type="submit">Delete your profile</button>
-            </div>
-        </fieldset>
-    </form>
-    </section>
-    </section>
-
-    <div class="parallax_1">
-
+                <button class="a-header" type="submit">Delete your profile</button>
+                <div class="content_1">
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo hic sunt exercitationem
+                        repellendus nesciunt fugit voluptas reprehenderit quibusdam, qui labore, iste asperiores.
+                        Similique tenetur, quia earum ut natus. Reiciendis odit quis alias totam, facilis a nemo,
+                        fugit laborum quod, enim dicta eaque voluptatem itaque nam vero laudantium, voluptas odio
+                        ullam.</p>
+                </div>
+            </form>
+        </div>
     </div>
     <div class="content_1">
 
         <h1>- Lorem ipsum -</h1>
 
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo hic sunt exercitationem repellendus nesciunt fugit voluptas reprehenderit quibusdam, qui labore, iste asperiores. Similique tenetur, quia earum ut natus. Reiciendis odit quis alias totam, facilis a nemo, fugit laborum quod, enim dicta eaque voluptatem itaque nam vero laudantium, voluptas odio ullam.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo hic sunt exercitationem repellendus nesciunt
+            fugit voluptas reprehenderit quibusdam, qui labore, iste asperiores. Similique tenetur, quia earum ut natus.
+            Reiciendis odit quis alias totam, facilis a nemo, fugit laborum quod, enim dicta eaque voluptatem itaque nam
+            vero laudantium, voluptas odio ullam.</p>
 
     </div>
     <div class="parallax_2"></div>
     <div class="content_2">
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo hic sunt exercitationem repellendus nesciunt fugit voluptas reprehenderit quibusdam, qui labore, iste asperiores. Similique tenetur, quia earum ut natus. Reiciendis odit quis alias totam, facilis a nemo, fugit laborum quod, enim dicta eaque voluptatem itaque nam vero laudantium, voluptas odio ullam.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo hic sunt exercitationem repellendus nesciunt
+            fugit voluptas reprehenderit quibusdam, qui labore, iste asperiores. Similique tenetur, quia earum ut natus.
+            Reiciendis odit quis alias totam, facilis a nemo, fugit laborum quod, enim dicta eaque voluptatem itaque nam
+            vero laudantium, voluptas odio ullam.</p>
     </div>
     </html>
 
