--- a/caffe/templates/account/edit-profile.html
+++ b/caffe/templates/account/edit-profile.html
@@ -8,35 +8,39 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>ssttrano</title>
-        <link rel="stylesheet" href='{% static '/css/style4.css' %}'>
+        <link rel="stylesheet" href='{% static '/css/style.css' %}'>
     </head>
 
     <div class="parallax_1">
-       <section class="card-box">
-            <form method="POST" enctype="multipart/form-data" action="{% url 'edit profile' request.user.id %}">
-                <fieldset>
+        <div class="add-user">
+            <form class="row-form-errors" method="POST" enctype="multipart/form-data" action="{% url 'edit profile' request.user.id %}">
                     <legend>Edit Your Profile</legend>
-                    <div class="container">
+
 
                         {{ form }}
                         {% csrf_token %}
 
                         <!-- Button for Editing Album -->
-                        <button class="edit-album" type="submit">Edit Your Profile</button>
-                    </div>
-                </fieldset>
+                        <button class="add-user" type="submit">Edit Your Profile</button>
+
+
             </form>
-        </section>
-
-        <div class="content_1">
-
-
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo hic sunt exercitationem repellendus nesciunt fugit voluptas reprehenderit quibusdam, qui labore, iste asperiores. Similique tenetur, quia earum ut natus. Reiciendis odit quis alias totam, facilis a nemo, fugit laborum quod, enim dicta eaque voluptatem itaque nam vero laudantium, voluptas odio ullam.</p>
         </div>
+    </div>
+    <div class="content_1">
+
+
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo hic sunt exercitationem repellendus nesciunt
+            fugit voluptas reprehenderit quibusdam, qui labore, iste asperiores. Similique tenetur, quia earum ut natus.
+            Reiciendis odit quis alias totam, facilis a nemo, fugit laborum quod, enim dicta eaque voluptatem itaque nam
+            vero laudantium, voluptas odio ullam.</p>
     </div>
     <div class="parallax_2"></div>
     <div class="content_2">
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo hic sunt exercitationem repellendus nesciunt fugit voluptas reprehenderit quibusdam, qui labore, iste asperiores. Similique tenetur, quia earum ut natus. Reiciendis odit quis alias totam, facilis a nemo, fugit laborum quod, enim dicta eaque voluptatem itaque nam vero laudantium, voluptas odio ullam.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo hic sunt exercitationem repellendus nesciunt
+            fugit voluptas reprehenderit quibusdam, qui labore, iste asperiores. Similique tenetur, quia earum ut natus.
+            Reiciendis odit quis alias totam, facilis a nemo, fugit laborum quod, enim dicta eaque voluptatem itaque nam
+            vero laudantium, voluptas odio ullam.</p>
     </div>
     </html>
 
