--- a/caffe/templates/account/login.html
+++ b/caffe/templates/account/login.html
@@ -12,23 +12,17 @@
     </head>
 
     <div class="parallax_1">
-        <section class="card-box">
+        <div class="add-user">
+            <form class="form-control" method="POST" action="{% url 'login user' %}">
+                <legend>Profile</legend>
 
-            <form method="POST" action="{% url 'login user' %}">
-                <fieldset>
-                    <legend>Profile</legend>
-                    <div class="container-login">
-                        {{ form }}
-                        {% csrf_token %}
-                        <button class="add-user" type="submit">Enter</button>
-                    </div>
-                </fieldset>
+                    {{ form }}
+                    {% csrf_token %}
+                    <button class="a-header" type="submit">Enter</button>
+
             </form>
-        </section>
-
+        </div>
     </div>
-
-
     <div class="content_1">
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo hic sunt
             fugit voluptas</p>
