--- a/caffe/templates/account/profile-details.html
+++ b/caffe/templates/account/profile-details.html
@@ -8,52 +8,53 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>ssttrano</title>
-        <link rel="stylesheet" href='{% static '/css/style6.css' %}'>
+        <link rel="stylesheet" href='{% static '/css/style.css' %}'>
     </head>
-    <section id="detailsPage">
-         <section class="card-box">
-                <div class="fieldBox">
-                    {% if object.picture %}
-                        <img src="{{ object.picture.url }}" height="600" alt="#">
-                    {% else %}
-                        <img src="https://www.afsafi.com/wp-content/uploads/2013/04/social-hub-profile-default.jpg" height="600" alt="">
-                    {% endif %}
-                </div>
 
+    <div class="parallax_1">
+        <h1>{{ object.first_name }}</h1>
+        <section id="card-box">
+            <fieldset>
+                {% if object.picture %}
+                    <img src="{{ object.picture.url }}" height="290" alt="#">
+                {% else %}
+                    <img src="https://www.afsafi.com/wp-content/uploads/2013/04/social-hub-profile-default.jpg"
+                         width="290" alt="#">
+                {% endif %}
+                    <a href="{% url 'edit profile' request.user.id %}" class="add-user">Edit</a>
+                    <a href="{% url 'change password' request.user.id %}" class="add-user">Password</a>
+                    <a href="{% url 'profile delete' request.user.id %}" class="add-user">Delete</a>
+            </fieldset>
+        </section>
 
-            <div class="actionBtn">
-
-                    <!-- Button for Deleting the Profile -->
-                    <a href="{% url 'edit profile' request.user.id %}" class="remove">Edit</a>
-                    <a href="{% url 'change password' request.user.id %}" class="remove">Password</a>
-                    <a href="{% url 'profile delete' request.user.id %}" class="remove">Delete</a>
-            </div>
-
-         </section>
         <section class="card-box">
-        <div class="albumInfo">
+            <div class="albumInfo">
                 <div class="profileText">
                     <ul>
                         <!-- Profile Info -->
-                        <h1>Username: {{ object.first_name }}</h1>
-                        <h1>Date_of_birth: {{ object.date_of_birth }}</h1>
-                        <h1>Email: {{ object.email }}</h1>
 
+                        {% if object.email %}
+                            <h1>Email: {{ object.email }}</h1>
+                        {% endif %}
                     </ul>
                 </div>
-        </div>
+            </div>
         </section>
-    </section>
-    <div class="parallax_1">
 
     </div>
-        <div class="content_1">
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo hic sunt exercitationem repellendus nesciunt fugit voluptas reprehenderit quibusdam, qui labore, iste asperiores. Similique tenetur, quia earum ut natus. Reiciendis odit quis alias totam, facilis a nemo, fugit laborum quod, enim dicta eaque voluptatem itaque nam vero laudantium, voluptas odio ullam.</p>
-        </div>
+    <div class="content_1">
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo hic sunt exercitationem repellendus nesciunt
+            fugit voluptas reprehenderit quibusdam, qui labore, iste asperiores. Similique tenetur, quia earum ut natus.
+            Reiciendis odit quis alias totam, facilis a nemo, fugit laborum quod, enim dicta eaque voluptatem itaque nam
+            vero laudantium, voluptas odio ullam.</p>
     </div>
+
     <div class="parallax_2"></div>
     <div class="content_2">
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo hic sunt exercitationem repellendus nesciunt fugit voluptas reprehenderit quibusdam, qui labore, iste asperiores. Similique tenetur, quia earum ut natus. Reiciendis odit quis alias totam, facilis a nemo, fugit laborum quod, enim dicta eaque voluptatem itaque nam vero laudantium, voluptas odio ullam.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo hic sunt exercitationem repellendus nesciunt
+            fugit voluptas reprehenderit quibusdam, qui labore, iste asperiores. Similique tenetur, quia earum ut natus.
+            Reiciendis odit quis alias totam, facilis a nemo, fugit laborum quod, enim dicta eaque voluptatem itaque nam
+            vero laudantium, voluptas odio ullam.</p>
     </div>
     </html>
 
