--- a/caffe/templates/base/base.html
+++ b/caffe/templates/base/base.html
@@ -10,54 +10,45 @@
 </head>
 
 <body>
-<div id="box">
 
-    <!-- Navigation Bar -->
-    <header class="header">
-
-        <nav class="nav">
-            <div>
-
-                {% if request.user.is_authenticated %}
-                    <a href="{% url 'index' %}">Home</a>
-                    {% if request.user.is_staff %}
-                        <a href="{% url 'create product' %}">Create product</a>
-                    {% endif %}
-
-                    </div>
-                    <div>
-                        <a href="{% url 'catalog' %}">Catalog</a>
-                        <a href="{% url 'purchase' request.user.id %}">Purchase</a>
-                    </div>
-                    <div>
-                        <a href="{% url 'profile details' request.user.id %}">Profile</a>
-                        <a href="{% url 'logout' request.user.id %}">Logout</a>
-                    </div>
+<header>
+    <div class="nav">
+        {% if request.user.is_authenticated %}
+            <div class="last-nav">
+                <a class="a-header" href="{% url 'index' %}">Home</a>
+                {% if request.user.is_staff %}
+                    <a class="a-header" href="{% url 'create product' %}">Create product</a>
                 {% endif %}
-        </nav>
-        {% if not request.user.is_authenticated %}
-            <div class="not_auth">
-                <ul class="not_auth_items">
-                    <li><a href="{% url 'register' %}">Register</a></li>
-                    <li><a href="{% url 'login user' %}">Login</a></li>
-                </ul>
+                <a class="a-header" href="{% url 'catalog' %}">Catalog</a>
+                <a class="a-header" href="{% url 'purchase' request.user.id %}">Purchase</a>
             </div>
+            <div>
+                <a class="a-header" href="{% url 'profile details' request.user.id %}">Profile</a>
+                <a class="a-header" href="{% url 'logout' request.user.id %}">Logout</a>
+            </div>
+            </div>
+
+            {% if not request.user.is_authenticated %}
+                <a class="a-header" href="{% url 'register' %}">Register</a>
+                <a class="a-header" href="{% url 'login user' %}">Login</a>
+            {% endif %}
         {% endif %}
-    </header>
 
-    <!-- End Navigation Bar -->
+</header>
 
-    {% block block_content %}
-    {% endblock %}
 
-    <!-- Footer -->
-    <footer>
-        <div>
 
-        </div>
-    </footer>
-    <!-- End Footer -->
+{% block block_content %}
+{% endblock %}
 
-</div>
+<!-- Footer -->
+<footer>
+    <div>
+
+    </div>
+</footer>
+<!-- End Footer -->
+
+
 </body>
 </html>
