--- a/caffe/templates/cart.html
+++ b/caffe/templates/cart.html
@@ -8,20 +8,20 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>ssttrano</title>
-        <link rel="stylesheet" href='{% static '/css/style6.css' %}'>
+        <link rel="stylesheet" href='{% static '/css/style.css' %}'>
     </head>
+
+    <div class="parallax_1">
     <h1>ITS</h1>
     {{ object }}
     {{ object }}
     {{ object }}
-    <div class="parallax_1">
-
         
     </div>
         <div class="content_1">
             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo hic sunt exercitationem repellendus nesciunt fugit voluptas reprehenderit quibusdam, qui labore, iste asperiores. Similique tenetur, quia earum ut natus. Reiciendis odit quis alias totam, facilis a nemo, fugit laborum quod, enim dicta eaque voluptatem itaque nam vero laudantium, voluptas odio ullam.</p>
         </div>
-    </div>
+
     <div class="parallax_2"></div>
     <div class="content_2">
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo hic sunt exercitationem repellendus nesciunt fugit voluptas reprehenderit quibusdam, qui labore, iste asperiores. Similique tenetur, quia earum ut natus. Reiciendis odit quis alias totam, facilis a nemo, fugit laborum quod, enim dicta eaque voluptatem itaque nam vero laudantium, voluptas odio ullam.</p>
