--- a/caffe/templates/comments/all-comments-product.html
+++ b/caffe/templates/comments/all-comments-product.html
@@ -8,43 +8,50 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>ssttrano</title>
-        <link rel="stylesheet" href='{% static '/css/style3.css' %}'>
+        <link rel="stylesheet" href='{% static '/css/style.css' %}'>
     </head>
 
     <div class="parallax_1">
 
-            <ul>
+        <ul>
             {% for comment in all_comments_in_product %}
                 <div class="card-box">
                     <fieldset>
-                        <div class="row-form-errors">
+
                             {% if comment.user.profile.picture %}
-                                <img src="{{ comment.user.profile.picture.url }}" height="290" alt="Cover Image">
+                                <img src="{{ comment.user.profile.picture.url }}" height="250" alt="Cover Image">
                             {% else %}
-                                <img src="https://www.afsafi.com/wp-content/uploads/2013/04/social-hub-profile-default.jpg" height="290" alt="">
+                                <img src="https://www.afsafi.com/wp-content/uploads/2013/04/social-hub-profile-default.jpg"
+                                     height="250" alt="Cover Image">
                             {% endif %}
-                        </div>
+
                         <h3>{{ comment.user }}</h3>
-
                     </fieldset>
 
-                    <fieldset>
+                    <div class="action-checkbox">
                         <div> {{ comment.text }}</div>
-                    </fieldset>
+                    </div>
                 </div>
             {% endfor %}
-            </ul>
+        </ul>
+    </div>
 
+    <div class="content_1">
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo hic sunt exercitationem repellendus nesciunt
+            fugit voluptas reprehenderit quibusdam, qui labore, iste asperiores. Similique tenetur, quia earum ut natus.
+            Reiciendis odit quis alias totam, facilis a nemo, fugit laborum quod, enim dicta eaque voluptatem itaque nam
+            vero laudantium, voluptas odio ullam.</p>
+    </div>
 
-        <div class="content_1">
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo hic sunt exercitationem repellendus nesciunt fugit voluptas reprehenderit quibusdam, qui labore, iste asperiores. Similique tenetur, quia earum ut natus. Reiciendis odit quis alias totam, facilis a nemo, fugit laborum quod, enim dicta eaque voluptatem itaque nam vero laudantium, voluptas odio ullam.</p>
-        </div>
+    <div class="parallax_2">
+
     </div>
     <div class="content_2">
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo hic sunt exercitationem repellendus nesciunt fugit voluptas reprehenderit quibusdam, qui labore, iste asperiores. Similique tenetur, quia earum ut natus. Reiciendis odit quis alias totam, facilis a nemo, fugit laborum quod, enim dicta eaque voluptatem itaque nam vero laudantium, voluptas odio ullam.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo hic sunt exercitationem repellendus nesciunt
+            fugit voluptas reprehenderit quibusdam, qui labore, iste asperiores. Similique tenetur, quia earum ut natus.
+            Reiciendis odit quis alias totam, facilis a nemo, fugit laborum quod, enim dicta eaque voluptatem itaque nam
+            vero laudantium, voluptas odio ullam.</p>
     </div>
-    <div class="parallax_2"></div>
-
     </html>
 
 {% endblock %}
