--- a/caffe/templates/product/catalog.html
+++ b/caffe/templates/product/catalog.html
@@ -8,19 +8,19 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>ssttrano</title>
-        <link rel="stylesheet" href='{% static '/css/style5.css' %}'>
+        <link rel="stylesheet" href='{% static '/css/style.css' %}'>
     </head>
 
     <div class="parallax_1">
         {% for object in objects %}
             <section id="detailsPage">
-
                 <div class="card-box">
                     <fieldset>
+                        <h2>{{ object.name }}</h2>
                         <div class="row-form-errors">
-                            <!-- Album Image -->
-                            <img src="{{ object.image.url }}" height="300" width="300" alt="Cover Image">
+                            <img src="{{ object.image.url }}" width="320" height="290" alt="Cover Image">
                         </div>
+                        <div class="add-user">{{ object.product_info }}</div>
 
                         <div class="albumInfo">
 
@@ -29,17 +29,16 @@
 
                                 <h2>Price: ${{ object.price|floatformat:2 }}</h2>
                                 <h3>Count: {{ object.remains|floatformat:2 }}</h3>
-                                <div class="actionBtn"><a href="{% url 'info product' object.pk %}"
-                                                          class="edit">Info</a></div>
+                                <a href="{% url 'info product' object.pk %}" class="add-user">Info</a>
                             </div>
 
                             <div class="actionBtn">
                                 <!-- Album Buttons -->
                                 {% if permission_required %}
-                                    <a href="{% url 'edit product' object.pk %}" class="edit">Edit</a>
-                                    <a href="{% url 'delete product' object.pk %}" class="edit">Delete</a>
+                                    <a class="add-user" href="{% url 'edit product' object.pk %}">Edit</a>
+                                    <a class="add-user" href="{% url 'delete product' object.pk %}">Delete</a>
                                 {% endif %}
-                                <a href="{% url 'add comment' object.id %}" class="edit">Comment</a>
+                                <a class="add-user" href="{% url 'add comment' object.id %}">Comment</a>
 
                             </div>
                         </div>
@@ -48,22 +47,21 @@
 
             </section>
         {% endfor %}
-
-        <div class="content_1">
-            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo hic sunt exercitationem repellendus
-                nesciunt fugit voluptas reprehenderit quibusdam, qui labore, iste asperiores. Similique tenetur, quia
-                earum ut natus. Reiciendis odit quis alias totam, facilis a nemo, fugit laborum quod, enim dicta eaque
-                voluptatem itaque nam vero laudantium, voluptas odio ullam.</p>
-        </div>
     </div>
+    <div class="content_1">
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo hic sunt exercitationem repellendus
+            nesciunt fugit voluptas reprehenderit quibusdam, qui labore, iste asperiores. Similique tenetur, quia
+            earum ut natus. Reiciendis odit quis alias totam, facilis a nemo, fugit laborum quod, enim dicta eaque
+            voluptatem itaque nam vero laudantium, voluptas odio ullam.</p>
+    </div>
+
+    <div class="parallax_2"></div>
     <div class="content_2">
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo hic sunt exercitationem repellendus nesciunt
             fugit voluptas reprehenderit quibusdam, qui labore, iste asperiores. Similique tenetur, quia earum ut natus.
             Reiciendis odit quis alias totam, facilis a nemo, fugit laborum quod, enim dicta eaque voluptatem itaque nam
             vero laudantium, voluptas odio ullam.</p>
     </div>
-    <div class="parallax_2"></div>
-
     </html>
 
 {% endblock %}
