--- a/caffe/templates/product/create_product.html
+++ b/caffe/templates/product/create_product.html
@@ -11,33 +11,33 @@
         <link rel="stylesheet" href='{% static '/css/style.css' %}'>
     </head>
 
-    <section class="card-box">
-        <form method="POST" action="{% url 'create product' %}" enctype="multipart/form-data">
-            <fieldset>
-                <legend>Add New Product</legend>
-                <div class="container">
-                    {% csrf_token %}
-                    {{ form }}
-                    <button class="add-album" type="submit">ADD</button>
-
-                </div>
-            </fieldset>
-        </form>
-    </section>
-
     <div class="parallax_1">
+        <section class="card-box">
+            <fieldset>
+                <form method="POST" action="{% url 'create product' %}" enctype="multipart/form-data">
 
+                    <legend>Add New Product</legend>
+
+                        {% csrf_token %}
+                        {{ form }}
+                        <button class="button" type="submit">ADD</button>
+                </form>
+            </fieldset>
+        </section>
     </div>
     <div class="content_1">
-
-        <h1>- Lorem ipsum -</h1>
-
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo hic sunt exercitationem repellendus nesciunt fugit voluptas reprehenderit quibusdam, qui labore, iste asperiores. Similique tenetur, quia earum ut natus. Reiciendis odit quis alias totam, facilis a nemo, fugit laborum quod, enim dicta eaque voluptatem itaque nam vero laudantium, voluptas odio ullam.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo hic sunt exercitationem repellendus nesciunt
+            fugit voluptas reprehenderit quibusdam, qui labore, iste asperiores. Similique tenetur, quia earum ut natus.
+            Reiciendis odit quis alias totam, facilis a nemo, fugit laborum quod, enim dicta eaque voluptatem itaque nam
+            vero laudantium, voluptas odio ullam.</p>
 
     </div>
     <div class="parallax_2"></div>
     <div class="content_2">
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo hic sunt exercitationem repellendus nesciunt fugit voluptas reprehenderit quibusdam, qui labore, iste asperiores. Similique tenetur, quia earum ut natus. Reiciendis odit quis alias totam, facilis a nemo, fugit laborum quod, enim dicta eaque voluptatem itaque nam vero laudantium, voluptas odio ullam.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo hic sunt exercitationem repellendus nesciunt
+            fugit voluptas reprehenderit quibusdam, qui labore, iste asperiores. Similique tenetur, quia earum ut natus.
+            Reiciendis odit quis alias totam, facilis a nemo, fugit laborum quod, enim dicta eaque voluptatem itaque nam
+            vero laudantium, voluptas odio ullam.</p>
     </div>
     </html>
 
