--- a/caffe/templates/product/delete-product.html
+++ b/caffe/templates/product/delete-product.html
@@ -11,40 +11,34 @@
         <link rel="stylesheet" href='{% static '/css/style.css' %}'>
     </head>
 
-    <section class="card-box">
-        <section class="editPage">
-    <form method="POST" action="{% url 'delete product' object.pk %}">
-        <fieldset>
-
-            <div class="container">
-                {% csrf_token %}
-                <legend>Delete product {{ object.name }}?</legend>
-
-                <button class="delete-album" type="submit">YES</button>
-                <hr>
-                 <div class="actionBtn">
-                     <a href="{% url 'catalog' %}" class="remove">NO</a>
-                 </div>
-
-            </div>
-        </fieldset>
-    </form>
-    </section>
-    </section>
-
     <div class="parallax_1">
+        <section class="card-box">
+            <fieldset>
+                <form method="POST" action="{% url 'delete product' object.pk %}">
+                        {% csrf_token %}
+                        <legend>Delete product {{ object.name }}?</legend>
 
+                        <button class="button" type="submit">YES</button>
+                        <div class="actionBtn">
+                            <a class="add-user" href="{% url 'catalog' %}">NO</a>
+                        </div>
+                </form>
+            </fieldset>
+        </section>
     </div>
     <div class="content_1">
-
-        <h1>- Lorem ipsum -</h1>
-
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo hic sunt exercitationem repellendus nesciunt fugit voluptas reprehenderit quibusdam, qui labore, iste asperiores. Similique tenetur, quia earum ut natus. Reiciendis odit quis alias totam, facilis a nemo, fugit laborum quod, enim dicta eaque voluptatem itaque nam vero laudantium, voluptas odio ullam.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo hic sunt exercitationem repellendus nesciunt
+            fugit voluptas reprehenderit quibusdam, qui labore, iste asperiores. Similique tenetur, quia earum ut natus.
+            Reiciendis odit quis alias totam, facilis a nemo, fugit laborum quod, enim dicta eaque voluptatem itaque nam
+            vero laudantium, voluptas odio ullam.</p>
 
     </div>
     <div class="parallax_2"></div>
     <div class="content_2">
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo hic sunt exercitationem repellendus nesciunt fugit voluptas reprehenderit quibusdam, qui labore, iste asperiores. Similique tenetur, quia earum ut natus. Reiciendis odit quis alias totam, facilis a nemo, fugit laborum quod, enim dicta eaque voluptatem itaque nam vero laudantium, voluptas odio ullam.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo hic sunt exercitationem repellendus nesciunt
+            fugit voluptas reprehenderit quibusdam, qui labore, iste asperiores. Similique tenetur, quia earum ut natus.
+            Reiciendis odit quis alias totam, facilis a nemo, fugit laborum quod, enim dicta eaque voluptatem itaque nam
+            vero laudantium, voluptas odio ullam.</p>
     </div>
     </html>
 
