--- a/caffe/templates/product/edit-product.html
+++ b/caffe/templates/product/edit-product.html
@@ -8,39 +8,36 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>ssttrano</title>
-        <link rel="stylesheet" href='{% static '/css/style5.css' %}'>
+        <link rel="stylesheet" href='{% static '/css/style.css' %}'>
     </head>
 
     <div class="parallax_1">
-        <section class="editPage">
-            <form method="POST" enctype="multipart/form-data" action="{% url 'edit product' object.pk %}">
-                <fieldset>
+        <section class="card-box">
+            <fieldset>
+                <form method="POST" enctype="multipart/form-data" action="{% url 'edit product' object.pk %}">
                     <legend>Edit Product</legend>
-                    <div class="container">
-
-                        {{ form }}
-                        {% csrf_token %}
-
-                        <!-- Button for Editing Album -->
-                        <div class="actionBtn">
-                        <button class="edit-album" type="submit">Edit Album</button>
-                        </div>
-                        <div class="actionBtn">
-                            <a href="{% url 'delete product' object.pk %}" class="remove">Delete</a>
-                        </div>
-                    </div>
-                </fieldset>
-            </form>
+                    {{ form }}
+                    {% csrf_token %}
+                    <button class="button" type="submit">Edit Album</button>
+                    <a href="{% url 'delete product' object.pk %}" class="add-user">Delete</a>
+                </form>
+            </fieldset>
         </section>
     </div>
     <div class="content_1">
         <h1>- Lorem ipsum -</h1>
 
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo hic sunt exercitationem repellendus nesciunt fugit voluptas reprehenderit quibusdam, qui labore, iste asperiores. Similique tenetur, quia earum ut natus. Reiciendis odit quis alias totam, facilis a nemo, fugit laborum quod, enim dicta eaque voluptatem itaque nam vero laudantium, voluptas odio ullam.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo hic sunt exercitationem repellendus nesciunt
+            fugit voluptas reprehenderit quibusdam, qui labore, iste asperiores. Similique tenetur, quia earum ut natus.
+            Reiciendis odit quis alias totam, facilis a nemo, fugit laborum quod, enim dicta eaque voluptatem itaque nam
+            vero laudantium, voluptas odio ullam.</p>
     </div>
     <div class="parallax_2"></div>
     <div class="content_2">
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo hic sunt exercitationem repellendus nesciunt fugit voluptas reprehenderit quibusdam, qui labore, iste asperiores. Similique tenetur, quia earum ut natus. Reiciendis odit quis alias totam, facilis a nemo, fugit laborum quod, enim dicta eaque voluptatem itaque nam vero laudantium, voluptas odio ullam.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo hic sunt exercitationem repellendus nesciunt
+            fugit voluptas reprehenderit quibusdam, qui labore, iste asperiores. Similique tenetur, quia earum ut natus.
+            Reiciendis odit quis alias totam, facilis a nemo, fugit laborum quod, enim dicta eaque voluptatem itaque nam
+            vero laudantium, voluptas odio ullam.</p>
     </div>
     </html>
 
