--- a/caffe/templates/purchase/clear-purchase.html
+++ b/caffe/templates/purchase/clear-purchase.html
@@ -11,41 +11,35 @@
         <link rel="stylesheet" href='{% static '/css/style.css' %}'>
     </head>
 
-    <!--Create Page-->
+    <div class="parallax_1">
 
-    <section class="card-box">
-        <section class="editPage">
-    <form method="POST" action="{% url 'clear purchase' object.pk %}">
-        <fieldset>
-
-            <div class="container">
-
+        <section class="add-user">
+            <form method="POST" action="{% url 'clear purchase' object.pk %}">
                 {{ form }}
                 {% csrf_token %}
-                
 
-                <!-- Button for Deleting an Album -->
-                <button class="delete-album" type="submit">Clear your purchase</button>
-            </div>
-        </fieldset>
-    </form>
-    </section>
-    </section>
+                <button class="a-header" type="submit">Clear your purchase</button>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem dolor dolore eveniet labore
+                    molestiae, nesciunt nisi possimus repellat suscipit temporibus.</p>
+            </form>
+        </section>
 
-    <div class="parallax_1">
 
     </div>
     <div class="content_1">
-
-        <h1>- Lorem ipsum -</h1>
-
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo hic sunt exercitationem repellendus nesciunt fugit voluptas reprehenderit quibusdam, qui labore, iste asperiores. Similique tenetur, quia earum ut natus. Reiciendis odit quis alias totam, facilis a nemo, fugit laborum quod, enim dicta eaque voluptatem itaque nam vero laudantium, voluptas odio ullam.</p>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo hic sunt exercitationem repellendus nesciunt
+            fugit voluptas reprehenderit quibusdam, qui labore, iste asperiores. Similique tenetur, quia earum ut natus.
+            Reiciendis odit quis alias totam, facilis a nemo, fugit laborum quod, enim dicta eaque voluptatem itaque nam
+            vero laudantium, voluptas odio ullam.</p>
     </div>
-    <div class="content_2">
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo hic sunt exercitationem repellendus nesciunt fugit voluptas reprehenderit quibusdam, qui labore, iste asperiores. Similique tenetur, quia earum ut natus. Reiciendis odit quis alias totam, facilis a nemo, fugit laborum quod, enim dicta eaque voluptatem itaque nam vero laudantium, voluptas odio ullam.</p>
-    </div>
+
     <div class="parallax_2"></div>
-
+    <div class="content_2">
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illo hic sunt exercitationem repellendus nesciunt
+            fugit voluptas reprehenderit quibusdam, qui labore, iste asperiores. Similique tenetur, quia earum ut natus.
+            Reiciendis odit quis alias totam, facilis a nemo, fugit laborum quod, enim dicta eaque voluptatem itaque nam
+            vero laudantium, voluptas odio ullam.</p>
+    </div>
     </html>
 
 {% endblock %}
