--- a/caffe/templates/account/change-password.html
+++ b/caffe/templates/account/change-password.html
@@ -20,7 +20,7 @@
                 {{ form }}
                 {% csrf_token %}
 
-                <button class="add-user" type="submit">Edit Your Profile</button>
+                <button class="button" type="submit">Edit Your Profile</button>
             </div>
         </form>
         </div>
