--- a/caffe/templates/account/edit-profile.html
+++ b/caffe/templates/account/edit-profile.html
@@ -21,7 +21,7 @@
                         {% csrf_token %}
 
                         <!-- Button for Editing Album -->
-                        <button class="add-user" type="submit">Edit Your Profile</button>
+                        <button class="button" type="submit">Edit Your Profile</button>
 
 
             </form>
