--- a/caffe/templates/comments/add-comments.html
+++ b/caffe/templates/comments/add-comments.html
@@ -21,7 +21,7 @@
                         {{ form }}
                         {% csrf_token %}
 
-                        <button class="add-user" type="submit">Your review</button>
+                        <button class="button" type="submit">Your review</button>
 
                     </div>
                 </fieldset>
