--- a/caffe/templates/product/ditailes-product.html
+++ b/caffe/templates/product/ditailes-product.html
@@ -34,7 +34,7 @@
                 <form method="POST" action="{% url 'cart' object.id %}" enctype="multipart/form-data">
                     {% csrf_token %}
                     {{ form }}
-                    <button class="button" type="submit"><h3>Purchase</h3></button>
+                    <button class="button" type="submit"><h3>Buy</h3></button>
                 </form>
             </fieldset>
         </section>
