--- a/caffe/static_files/css/style.css
+++ b/caffe/static_files/css/style.css
@@ -1,7 +1,13 @@
+html {
+    width: 100%;
+}
+
+
 *{
     margin: 0; /*Обнуление отступов задаваемых браузером*/
     padding: 0;
     max-font-size: 30px;
+    width: 100%;
     /*box-sizing: border-box;*/
 }
 
@@ -11,12 +17,11 @@
 }
 
 .card-box {
-
+    min-width: 320px;
     display: flex;
-
     flex-flow: row;
     justify-content: start;
-
+    padding-bottom: 30px;
 }
 
 .parallax_1{
@@ -44,7 +49,7 @@
     text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.8);
 
     height: 1500px;
-
+    min-width: 320px;
 }
 .parallax_2{
     background: url(../images/caffe.jpg);
@@ -70,12 +75,11 @@
     justify-content: center;
 
     background-color: #0B0C10;
-    border-radius: 25px;
+    border-radius: 22px;
     margin-bottom: 5px;
 }
 
 p {
-
     text-decoration: none;
     text-align: start;
     margin-left: 10px;
@@ -112,7 +116,7 @@ section {
 
 }
 fieldset {
-
+    display: flex;
     flex: 0 1 auto;
     flex-flow: column;
     justify-content: center;
@@ -124,7 +128,7 @@ fieldset {
     /*max-height: 800px;*/
     /*min-height: 410px;*/
     background-color: rgba(0,0,0,0.64);
-
+    padding-bottom: 10px;
 }
 
     form {
@@ -158,7 +162,7 @@ fieldset {
         color: white;
         font-size: 20px;
         width: 80%;
-        max-height: 8%;
+        max-height: 6%;
         display: flex;
         flex-flow: column;
         justify-content: center;
@@ -173,8 +177,10 @@ fieldset {
         display: flex;
         flex-flow: row;
         justify-content: center;
-        max-height: 40%;
-        width: 45%;
+        height: 45%;
+        min-height: 5%;
+        max-width: 45%;
+        min-width: 310px;
         color: white;
         background-color: rgba(0,0,0,0.94);
         border-radius: 10px;
@@ -187,7 +193,7 @@ fieldset {
         flex-flow: row;
         justify-content: center;
         height: 50px;
-        width: 300px;
+        max-width: 318px;
         color: white;
         background-color: rgba(0,0,0,0.94);
         border-radius: 10px;
