--- a/caffe/templates/product/catalog.html
+++ b/caffe/templates/product/catalog.html
@@ -13,37 +13,31 @@
 
     <div class="parallax_1">
         {% for object in objects %}
-            <section id="detailsPage">
-                <div class="card-box">
+            <section class="card-box">
                     <fieldset>
                         <h2>{{ object.name }}</h2>
-                        <div class="row-form-errors">
-                            <img src="{{ object.image.url }}" width="320" height="290" alt="Cover Image">
-                        </div>
+
+                            <img src="{{ object.image.url }}" width=200px height=300px alt="Cover Image">
+
                         <div class="add-user">{{ object.product_info }}</div>
 
-                        <div class="albumInfo">
 
-                            <div class="albumText">
-                                <!-- Album Info -->
 
                                 <h2>Price: ${{ object.price|floatformat:2 }}</h2>
                                 <h3>Count: {{ object.remains|floatformat:2 }}</h3>
                                 <a href="{% url 'info product' object.pk %}" class="add-user">Info</a>
-                            </div>
 
-                            <div class="actionBtn">
-                                <!-- Album Buttons -->
+
                                 {% if permission_required %}
                                     <a class="add-user" href="{% url 'edit product' object.pk %}">Edit</a>
                                     <a class="add-user" href="{% url 'delete product' object.pk %}">Delete</a>
                                 {% endif %}
                                 <a class="add-user" href="{% url 'add comment' object.id %}">Comment</a>
 
-                            </div>
-                        </div>
+
+
                     </fieldset>
-                </div>
+
 
             </section>
         {% endfor %}
