--- a/caffe/static_files/css/header.css
+++ b/caffe/static_files/css/header.css
@@ -36,7 +36,7 @@ header {
 
 img {
     min-width: 300px;
-    max-width: 600px;
+    max-width: 500px;
     border-radius: 15px;
     box-shadow: 2px 2px 2px 1px #0B0C10;
 }
@@ -57,7 +57,6 @@ li {
     align-content: flex-end;
     margin-right: 15px;
     text-decoration: none;
-    /*box-shadow: 0 2px 10px rgb(240, 240, 240);*/
     border-radius: 15px;
 }
 
@@ -89,6 +88,6 @@ li {
     border-radius: 5px;
     color: white;
     text-decoration: none;
-    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif; /*Шрифт текста*/
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 
 }
