--- a/caffe/static_files/css/style.css
+++ b/caffe/static_files/css/style.css
@@ -121,12 +121,12 @@ fieldset {
     flex-flow: column;
     justify-content: center;
 
-
-    width: 34%;
+    min-width: 310px;
+    width: 50%;
     height: 99%;
+    max-height: 800px;
     border-radius: 10px;
-    /*max-height: 800px;*/
-    /*min-height: 410px;*/
+
     background-color: rgba(0,0,0,0.64);
     padding-bottom: 10px;
 }
@@ -153,6 +153,7 @@ fieldset {
 
     .row-form-errors{
         flex: 0 1 auto;
+        width: 60%;
 
 
     }
@@ -192,12 +193,13 @@ fieldset {
         display: flex;
         flex-flow: row;
         justify-content: center;
+        align-items: center;
         height: 50px;
         max-width: 318px;
         color: white;
         background-color: rgba(0,0,0,0.94);
         border-radius: 10px;
-        padding-top: 5%;
+
         box-shadow: 0 0 10px 2px white;
     }
 
